<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet_tutorial</name>
  <version>0.0.0</version>
  <description>practice of lanelet</description>
  <maintainer email="soblin@todo.todo">soblin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_extension</depend>
  <depend>ament_index_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
